# Bybit-Spot-AIBot-V2

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bybitbot/: __init__.py  bot.py  config.py  risk.py
bybitbot/bybitbot/: bot.py
bybitbot/strategies/: __init__.py  base.py  breakout.py  ma.py  ml.py  rsi.py
tests/: conftest.py  test_daily_limits.py  test_features.py  test_high_volatility.py  test_indicator_change.py  test_log_trade.py  test_open_short.py  test_position.py  test_telegram.py  test_trade.py  test_trailing.py
tests/test_trade.py → tests/: test_trade.py
