[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bybitbot"
version = "0.1.0"
description = "Bybit spot trading bot"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "pandas-ta",
  "pybit",
  "pydantic",
  "pydantic-settings",
  "numpy",
  "scikit-learn",
  "xgboost",
  "joblib",
  "requests"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pre-commit", "ruff", "black", "mypy"]
